examples/fail/call_var1.niu
import "std/u64.niu"
fn hoge(a: u64, b: u64) -> u64 {
  a + b
}

fn main() -> void {
  hoge(1u64);
}
